--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>Calculator</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <input type='text' id='display' />
